# windows-mic-ctrl

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
driver/: README.md
driver/protocol/: virtual_mic_protocol.md
driver/windows/: README.md
driver/windows/docs/: build-and-install.md  porting-checklist.md
driver/windows/inf/: windows-mic-ctrl-virtual-mic.inf
driver/windows/scripts/: apply-porting-overrides.ps1  build-driver.ps1  check-toolchain.ps1  dev-bootstrap.ps1  install-driver-test.ps1  prepare-sysvad.ps1  uninstall-driver.ps1
driver/windows/src/: README.md
openspec/: project.md
openspec/changes/add-qq-ptt-virtual-mic/: proposal.md  tasks.md
openspec/changes/add-qq-ptt-virtual-mic/specs/mic-gating/: spec.md
openspec/changes/rework-hotkey-and-virtual-mic/: proposal.md  tasks.md
openspec/changes/rework-hotkey-and-virtual-mic/specs/mic-gating/: spec.md
scripts/: stage-driver-assets.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/drivers/windows/: README.md
src-tauri/src/: app_state.rs  audio.rs  commands.rs  config.rs  driver_installer.rs  error.rs  gate.rs  hotkey.rs  lib.rs  main.rs  mouse_hook.rs  tray.rs  types.rs  virtual_mic.rs
src/components/ui/: button.tsx  card.tsx  select.tsx  switch.tsx
src/lib/: types.ts
