[package]
name = "windows-mic-ctrl"
version = "0.1.5"
description = "Windows microphone push-to-talk controller"
authors = ["exqlnet"]
edition = "2021"
rust-version = "1.82.0"

[lib]
name = "windows_mic_ctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
cpal = "0.15"
ringbuf = "0.4"
parking_lot = "0.12"
anyhow = "1"
dirs = "5"

# tauri
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
